Added photo to home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+   <!--  <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -56,11 +56,12 @@
                 <a href="#contact">Contact</a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
 
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
+        <img src="img/us.jpg" height="200px" class="circle">
             <h1>Tahnee and Oscar</h1>
             <h3> goto New York</h3>
             <br>
