--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Oscar & Tahnee</strong>
                     </h4>
-                    <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                    <p>Melbourne, Australia</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
+                        <li><i class="fa fa-phone fa-fw"></i> (+61) 400-536707</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:me@oscarmorrison.com">me@oscarmorrison.com</a>
                         </li>
                     </ul>
                     
