updated contact and map

--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Oscar & Tahnee</strong>
                     </h4>
-                    <p>Melbourne, Australia</p>
+                    <p>New York City, USA</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (+61) 400-536707</li>
+                        <li><i class="fa fa-phone fa-fw"></i> +1 (323) 348-7945</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:me@oscarmorrison.com">me@oscarmorrison.com</a>
                         </li>
                     </ul>
@@ -271,7 +271,7 @@
     
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3025.0873424425495!2d-73.986932!3d40.694074000000015!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xda9b313d596491f7!2sNYU+Polytechnic+School+of+Engineering!5e0!3m2!1sen!2sus!4v1413628631646" frameborder="0" style="border:0"></iframe>
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24195.319505622607!2d-74.00016524088659!3d40.708881229184755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1422004059246" frameborder="0" style="border:0"></iframe>
     </section>
 
     <!-- jQuery Version 1.11.0 -->
