--- a/index.html
+++ b/index.html
@@ -269,9 +269,17 @@
         </section>
     </footer>
     
+    <section id="instagram" class="instagram">
+        <!-- SnapWidget -->
+<script src="http://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="http://snapwidget.com/in/?h=dGFobmVlYW5kb3NjYXJpbm5ld3lvcmt8aW58MjAwfDd8M3x8bm98MHxub25lfG9uU3RhcnR8bm98eWVz&ve=270115" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
+    </section>
+
+
+
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24195.319505622607!2d-74.00016524088659!3d40.708881229184755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1422004059246" frameborder="0" style="border:0"></iframe>
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/embed?mid=zi26ixv0LLUM.kGeVmozShVyw" frameborder="0" style="border:0"></iframe>
     </section>
 
     <!-- jQuery Version 1.11.0 -->
