--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <a href="#instagram" class="btn btn-lg btn-dark">Our Photos</a>
                     <a href="#contact" class="btn btn-lg btn-light">Where we want to live</a>
                     <a href="#footer" class="btn btn-lg btn-dark">Get in contact</a>
                 </div>
@@ -279,7 +280,7 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/embed?mid=zi26ixv0LLUM.kGeVmozShVyw" frameborder="0" style="border:0"></iframe>
+        <iframe width="100%" height="100%" style="border:0;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/embed?mid=zi26ixv0LLUM.kGeVmozShVyw" frameborder="0" style="border:0"></iframe>
     </section>
 
     <!-- jQuery Version 1.11.0 -->
