Updated Community information section

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                                     <strong>Community</strong>
                                 </h4>
                                 <p>We are both hoping to become a part of the tech community in SF.</p>
-                                <p>[Oscar] hopes to teach coding and chess to school kids.</p>
-                                <p>[Tahnee] wants to contribute to Women in Tech community</p>
+                                <p>Oscar hopes to teach coding and chess to school kids.</p>
+                                <p>Tahnee wants to contribute to Women in Tech community</p>
                                 
                             </div>
                         </div>
