Changed to boston

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Tahnee and Oscar are in San Francisco</title>
+    <title>Tahnee and Oscar are going to Boston!</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +61,7 @@
         <div class="text-vertical-center">
         <img src="img/us.jpg" height="200px" class="circle">
             <h1>Tahnee and Oscar</h1>
-            <h3> move to San Francisco</h3>
+            <h3> move to Boston</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
@@ -255,7 +255,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Oscar & Tahnee</strong>
                     </h4>
-                    <p>San Francisco, USA</p>
+                    <p>USA</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i>+1 (772) 2227-155</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:me@oscarmorrison.com">me@oscarmorrison.com</a>
